--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -300,6 +300,7 @@
             sliderType: "standard",
             sliderLayout: "auto",
             delay: 2000,
+            onHoverStop: 'off',
             navigation:
             {
                arrows:
