--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -5,7 +5,12 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Perfectly crafted to suite your construction business with almost unlimited options to get almost unlimited options.">
-      <title>Công Ty Cổ Phần Việt Ren</title>
+      <% if params[:locale] == "en" %>
+         <title>VietRen Joint Stock Company</title>
+      <% else %>
+         <title>Công Ty Cổ Phần Việt Ren</title>
+      <% end %>
+      
       <link rel="shortcut icon" href="favicon.ico">
       <meta property="og:title" content="Construction - HTML Template" />
       <meta property="og:type" content="website" />
