--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -264,7 +264,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="download">
-                  <div class="download-content text-uppercase"><i class="fa fa-file-pdf-o"></i> <%= t(:company_profile) %></div> <a href="<%= url_for(controller: "admin/companies", action: "hsnl_vietren") %>" target="_blank" class="btn btn-md btn-dark btn-shadow"><i class="fa fa-cloud-download"></i> Download</a> </div>
+                  <div class="download-content text-uppercase"><i class="fa fa-file-pdf-o"></i> <%= t(:company_profile) %></div> <a href="<%= url_for(controller: "confirm_download", action: "index") %>" target="_blank" class="btn btn-md btn-dark btn-shadow"><i class="fa fa-cloud-download"></i> Download</a> </div>
             </div>
          </div>
       </div>
