--- a/app/views/confirm_download/index.html.erb
+++ b/app/views/confirm_download/index.html.erb
@@ -1,12 +1,11 @@
 <% if params[:locale] == "en" %>
-  
   <%= form_tag({controller: "confirm_download", action: "index"}, method: "post", class: "form-horizontal center-screen") do %>
     <h3 style="padding: 10px;">DOWNLOAD</h3>
     <div class="form-confirm">
       <div class="form-group">
         <label class="control-label col-sm-2" for="password-confirm">Password:</label>
         <div class="col-sm-9">          
-          <input type="password" class="form-control" id="password-confirm" name="password-confirm" placeholder="Input password.....">
+          <input type="password" class="form-control" id="password-confirm" name="password_confirm" placeholder="Input password.....">
         </div>
       </div>
       <div class="form-group">        
@@ -17,14 +16,13 @@
     </div>
   <% end %>
 <% else %>
-  
   <%= form_tag({controller: "confirm_download", action: "index"}, method: "post", class: "form-horizontal center-screen") do %>
     <h3 style="padding: 10px;">TẢI XUỐNG</h3>
     <div class="form-confirm">
       <div class="form-group">
         <label class="control-label col-sm-2" for="password-confirm">Mật khẩu:</label>
         <div class="col-sm-9">          
-          <input type="password" class="form-control" id="password-confirm" name="password-confirm" placeholder="Nhập mật khẩu.....">
+          <input type="password" class="form-control" id="password-confirm" name="password_confirm" placeholder="Nhập mật khẩu.....">
         </div>
       </div>
       <div class="form-group">        
