--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,8 @@
          <div class="col-xs-6">
             <ul class="contact-info transparent">
                <li><i class="fa fa-phone"></i> <span class="important"><%= @company.phone + " - " + @company.phone_2 %></span></li>
-               <li><i class="fa fa-envelope"></i> <a href="mailto:vrc@vnn.vn">vrc@vnn.vn</a></li>
+               <li><i class="fa fa-envelope"></i> <a href="mailto:<%= @company.email %>"><%= @company.email %></a></li>
+               <li><i class="fa fa-envelope"></i> <a href="mailto:<%= @company.email_2 %>"><%= @company.email_2 %></a></li>
             </ul>
          </div>
          <!-- /Top Bar Left -->
