--- a/app/views/admin/main/_navbar.html.erb
+++ b/app/views/admin/main/_navbar.html.erb
@@ -25,7 +25,7 @@
 
             <li class="dropdown dropdown-user">
                 <a class="dropdown-toggle" data-toggle="dropdown">
-                    <img src="/backend/assets/images/logo-vietren.jpg" alt="">
+                    <img src="/backend/assets/images/logo-cirle.png" alt="">
                     <span>Administrator</span>
                     <i class="caret"></i>
                 </a>
