--- a/app/views/admin/main/_user_menu.html.erb
+++ b/app/views/admin/main/_user_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="sidebar-user">
     <div class="category-content">
         <div class="media">
-            <a href="#" class="media-left"><img src="/backend/assets/images/logo-vietren.jpg" class="img-circle img-sm" alt=""></a>
+            <a href="#" class="media-left"><img src="/backend/assets/images/logo-cirle.png" class="img-circle img-sm" alt=""></a>
             <div class="media-body">
                 <span class="media-heading text-semibold">Administrator - VietRen Joint Stock Company</span>
                 <div class="text-size-mini text-muted">
