--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,19 +6,18 @@
          <!-- Top Bar Left -->
          <div class="col-xs-6">
             <ul class="contact-info transparent">
-               <li><i class="fa fa-phone"></i> <span class="important"><%= @company.phone + " - " + @company.phone_2 %></span></li>
-               <li><i class="fa fa-envelope"></i> <a href="mailto:<%= @company.email %>"><%= @company.email %></a></li>
-               <li><i class="fa fa-envelope"></i> <a href="mailto:<%= @company.email_2 %>"><%= @company.email_2 %></a></li>
+               <li><i class="fa fa-phone"></i> <a href="" class="important"><%= @company.phone + " - " + @company.phone_2 %></a href=""></li>
+               <li><i class="fa fa-envelope"></i><a href="mailto:<%= @company.email %>"><%= @company.email %></a> - <a href="mailto:<%= @company.email_2 %>"><%= @company.email_2 %></a></li>
             </ul>
          </div>
          <!-- /Top Bar Left -->
          <!-- Top Bar Left -->
          <div class="above-nav-bar col-xs-6 text-right">
            <ul class="social social-transparent-border">
-               <li><a href="https://www.facebook.com/vietren02032009/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="https://plus.google.com/u/0/118217641743102960494?hl=vi" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="https://www.pinterest.com/vietren999999/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
-               <li><a href="https://www.youtube.com/channel/UCcVOqTLu33lURWPwBWLCZIg" target="_blank"><i class="fa fa-youtube" target="_blank"></i></a></li>
+               <li><a href="https://www.facebook.com/vietren02032009/" target="_blank"><i class="fa fa-facebook color-facebook"></i></a></li>
+               <li><a href="https://plus.google.com/u/0/118217641743102960494?hl=vi" target="_blank"><i class="fa fa-google-plus color-google-plus"></i></a></li>
+               <li><a href="https://www.pinterest.com/vietren999999/" target="_blank"><i class="fa fa-pinterest color-pinterest"></i></a></li>
+               <li><a href="https://www.youtube.com/channel/UCcVOqTLu33lURWPwBWLCZIg" target="_blank"><i class="fa fa-youtube color-youtube" target="_blank"></i></a></li>
            </ul>
         </div>
          <!-- /Top Bar Left -->
