--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -48,8 +48,9 @@
               </li>
               <li class="menu-item  menu-item-has-children"><%= link_to t(:gallery), "#" %>
                  <ul class="sub-menu">
-                    <li class="menu-item"><%= link_to t(:picture_investment_projects), { controller: "investment_projects", action: "index" } %></li>
-                    <li class="menu-item"><%= link_to t(:picture_construction_works), { controller: "construction_work", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:pictures_completed_construction_works), { controller: "gallery_completed_construction", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:pictures_construction_works), { controller: "construction_work", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:pictures_investment_projects), { controller: "investment_projects", action: "index" } %></li>
                  </ul>
               </li>
               <li class="menu-item"><%= link_to t(:recruitment), { controller: "recruitment", action: "index" } %></li>
