--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -51,7 +51,7 @@
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-envelope"></i></th>
-                          <td class="info-table-content"><a href="mailto:<%= @company.email %>"><%= @company.email %></a></td>
+                          <td class="info-table-content"><a href="mailto:<%= @company.email %>"><%= @company.email %></a> - <a href="mailto:<%= @company.email_2 %>"><%= @company.email_2 %></a></td>
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-globe"></i></th>
