--- a/app/views/letter_spring/_right_menu.html.erb
+++ b/app/views/letter_spring/_right_menu.html.erb
@@ -36,6 +36,7 @@
     <li><i class="fa fa-home"></i> <%= t(:company_name) %></li>
     <li><i class="fa fa-map-marker"></i> <%= t(:company_address) %></li>
     <li><i class="fa fa-phone"></i> <a href="#" class="important"><%= @company.phone + " - " + @company.phone_2 %></a></li>
+    <li><i class="fa fa-envelope"></i><a href="mailto:<%= @company.email %>"><%= @company.email %></a> - <a href="mailto:<%= @company.email_2 %>"><%= @company.email_2 %></a></li>
     <li><i class="fa fa-fax"></i> <a href="#"><%= @company.fax %></a></li>
   </ul>
 </div>
