--- a/public/frontend/css/core.css
+++ b/public/frontend/css/core.css
@@ -48,7 +48,7 @@ nav.site-navigation {
   nav.site-navigation ul li a {
     color: #fff;
     font-size: 13px;
-    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: "Roboto",Helvetica Neue,Helvetica,Arial,sans-serif;
     font-weight: bold;
     text-decoration: none;
     text-transform: uppercase; }
@@ -290,7 +290,7 @@ header.bottom {
           min-height: 40px;
           padding-top: 10px;
           text-transform: uppercase;
-          font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+          font-family: "Roboto",Helvetica Neue,Helvetica,Arial,sans-serif;
           font-size: 13px;
           font-weight: normal; }
           .site-navigation .main-menu li a:hover, .site-navigation .main-menu li a:active, .site-navigation .main-menu li a:focus {
@@ -690,7 +690,7 @@ header.style-4 .above-nav-bar {
 .megamenu-title {
   color: #fab702;
   display: inline-block;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: "Roboto",Helvetica Neue,Helvetica,Arial,sans-serif;
   padding-bottom: 15px;
   text-transform: uppercase; }
 
@@ -715,7 +715,7 @@ header.style-4 .above-nav-bar {
 body {
   color: #898989;
   line-height: 1.7em;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; }
+  font-family: "Roboto",Helvetica Neue,Helvetica,Arial,sans-serif; }
 
 a {
   color: #fab702; }
@@ -812,7 +812,7 @@ p + .panel-group {
 .h5,
 .title.h5 {
   color: #000000;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: "Roboto",Helvetica Neue,Helvetica,Arial,sans-serif;
   font-size: 18px; }
 
 .rev_slider_wrapper {
@@ -837,7 +837,7 @@ p + .panel-group {
 
 h1, h2, h3, h4, h5, h6 {
   color: #000000;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; }
+  font-family: "Roboto",Helvetica Neue,Helvetica,Arial,sans-serif; }
 
 img {
   height: auto;
@@ -991,7 +991,7 @@ img {
         margin-top: 15px; } }
 
 .rev_slider {
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; }
+  font-family: "Roboto",Helvetica Neue,Helvetica,Arial,sans-serif; }
 
 .rev-title,
 .rev-subtitle {
