--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -239,7 +239,7 @@
                      <div class="col-xs-2">
                         <figure class="gallery-item">
                            <div class="gallery-icon">
-                              <a href="/frontend/images/bang-khen/big-6.png"><img src="/frontend/images/bang-khen/small-6.png" alt="Gallery 6"></a>
+                              <a href="/frontend/images/bang-khen/big-6.jpg"><img src="/frontend/images/bang-khen/small-6.png" alt="Gallery 6"></a>
                            </div>
                         </figure>
                      </div>
