--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -23,11 +23,6 @@
      <!-- Contact info -->
      <section class="section no-top-padding">
         <div class="container">
-           <div class="row">
-              <div class="page-content col-md-12">
-                 <h3 class="title text-uppercase"><%= t(:contact_us) %></h3>
-              </div>
-           </div>
            <div class="row" style="margin-top: 40px;">
               <div class="col-md-5">
                  <!-- Info Table Element -->
@@ -79,7 +74,7 @@
                     <fieldset class="form-group col-md-12">
                        <textarea id="message" name="message" placeholder="Message" required></textarea>
                        <label for="message"></label>
-                       <input type="submit" class="btn btn-normal btn-md" value="Submit"> </fieldset>
+                       <input type="submit" class="btn btn-normal btn-md" value="Gửi"> </fieldset>
                     <div class="text-center spinner col-md-12 hidden"><i class="fa fa-spinner fa-pulse"></i></div>
                     <div class="info col-md-12"></div>
                  </form>
