--- a/app/views/letter_spring/_right_menu.html.erb
+++ b/app/views/letter_spring/_right_menu.html.erb
@@ -6,7 +6,11 @@
           <li>
              <a href="#">
                <a href="<%= item.image_url %>" target="_blank"><img src="<%= item.image_url.small_news %>" alt="<%= item.title_en %>"></a>
-               <span title="<%= item.title_en %>"><%= link_to truncate(strip_tags(item.title_en), length: 50), { controller: "news_single", action: "index", news_id: item.id } %></span>
+               <% if !item.title_en.present? %>
+                  <span title="<%= item.title_vn %>"><%= link_to truncate(strip_tags(item.title_vn), length: 50), { controller: "news_single", action: "index", news_id: item.id } %></span>
+               <% else %>
+                  <span title="<%= item.title_en %>"><%= link_to truncate(strip_tags(item.title_en), length: 50), { controller: "news_single", action: "index", news_id: item.id } %></span>
+               <% end %>
              </a>
           </li>
         <% end %>
