--- a/app/views/currency_page/index.html.erb
+++ b/app/views/currency_page/index.html.erb
@@ -84,7 +84,7 @@
                                     <tr>
                                        <td colspan="3" style="text-align:left; font-weight: bold"><%= city.attributes["name"] %></td>
                                     </tr>
-                                    <%= city.xpath("item").each do |item| %>
+                                    <% city.xpath("item").each do |item| %>
                                        <tr>
                                           <td style="vertical-align:middle"><%= item.attributes["type"] %></td>
                                           <td style="vertical-align:middle"><%= item.attributes["buy"] %></td>
