--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,10 +15,10 @@
          <!-- Top Bar Left -->
          <div class="above-nav-bar col-xs-4 text-right">
            <ul class="social social-transparent-border">
-               <li><a href="https://www.facebook.com/vietren02032009/" target="_blank"><i class="fa fa-facebook color-facebook"></i></a></li>
-               <li><a href="https://plus.google.com/u/0/118217641743102960494?hl=vi" target="_blank"><i class="fa fa-google-plus color-google-plus"></i></a></li>
-               <li><a href="https://www.pinterest.com/vietren999999/" target="_blank"><i class="fa fa-pinterest color-pinterest"></i></a></li>
-               <li><a href="https://www.youtube.com/channel/UCcVOqTLu33lURWPwBWLCZIg" target="_blank"><i class="fa fa-youtube color-youtube" target="_blank"></i></a></li>
+               <li><a href="https://www.facebook.com/vietren02032009/" target="_blank" class="hover-facebook"><i class="fa fa-facebook color-facebook"></i></a></li>
+               <li><a href="https://plus.google.com/u/0/118217641743102960494?hl=vi" target="_blank" class="hover-google-plus"><i class="fa fa-google-plus color-google-plus"></i></a></li>
+               <li><a href="https://www.pinterest.com/vietren999999/" target="_blank" class="hover-pinterest"><i class="fa fa-pinterest color-pinterest"></i></a></li>
+               <li><a href="https://www.youtube.com/channel/UCcVOqTLu33lURWPwBWLCZIg" target="_blank" class="hover-youtube"><i class="fa fa-youtube color-youtube" target="_blank"></i></a></li>
            </ul>
         </div>
          <!-- /Top Bar Left -->
