fix icon social

--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -88,11 +88,11 @@
         <div class="col-md-6 text-right">
            <!-- Social Widget -->
            <div class="widget widget-social">
-              <ul class="social">
-               <li><a href="https://www.facebook.com/vietren02032009/" target="_blank"><i class="fa fa-facebook color-facebook"></i></a></li>
-               <li><a href="https://plus.google.com/u/0/118217641743102960494?hl=vi" target="_blank"><i class="fa fa-google-plus color-google-plus"></i></a></li>
-               <li><a href="https://www.pinterest.com/vietren999999/" target="_blank"><i class="fa fa-pinterest color-pinterest"></i></a></li>
-               <li><a href="https://www.youtube.com/channel/UCcVOqTLu33lURWPwBWLCZIg" target="_blank"><i class="fa fa-youtube color-youtube" target="_blank"></i></a></li>
+              <ul class="social social-transparent-border">
+                <li><a href="https://www.facebook.com/vietren02032009/" target="_blank" style="background:#3f4da1;border:#3f4da1"><i class="fa fa-facebook color-facebook"></i></a></li>
+                <li><a href="https://plus.google.com/u/0/118217641743102960494?hl=vi" target="_blank" style="background: #dd4b38;border:#dd4b38"><i class="fa fa-google-plus color-google-plus"></i></a></li>
+                <li><a href="https://www.pinterest.com/vietren999999/" target="_blank" style="background: #dd4b38;border:#dd4b38"><i class="fa fa-pinterest-p color-pinterest"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCcVOqTLu33lURWPwBWLCZIg" target="_blank" style="background: #dd4b38;border:#dd4b38"><i class="fa fa-youtube-play color-youtube" target="_blank"></i></a></li>
               </ul>
            </div>
            <!-- /Social Widget -->
