--- a/public/frontend/css/components.css
+++ b/public/frontend/css/components.css
@@ -857,6 +857,8 @@ header.site-header .contact-info.style-4 li {
 
 .info-table-content {
   color: #000000; }
+.info-table-content a {
+  color: #000000; }
   .info-table-content strong {
     color: #898989;
     font-weight: normal; }
@@ -1668,7 +1670,7 @@ section.recent-news {
 .owl-nav {
   display: inline-block; }
   .owl-nav > span {
-    color: #ccc;
+    color: #fab702;
     font-size: 18px;
     padding: 5px 14px;
     border-radius: 3px;
