--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -81,16 +81,16 @@ a:hover {
     color: #026cd0 !important;
 }
 .color-facebook {
-    color: #3f4da1;
+    color: #ffffff;
 }
 .color-google-plus {
-    color: #d74527;
+    color: #ffffff;
 }
 .color-pinterest {
-    color: #d74527;
+    color: #ffffff;
 }
 .color-youtube {
-    color: #d74527;
+    color: #fff;
 }
 .color-facebook:hover {
     color: #000000;
