--- a/app/views/letter_spring/_header.html.erb
+++ b/app/views/letter_spring/_header.html.erb
@@ -16,10 +16,10 @@
                 <li><i class="fa fa-usd"></i><%= link_to t(:currency_exchange_rates), { controller: "currency_page", action: "index" } %></li>
               </ul>
               <ul class="social social-transparent-border">
-                <li><a href="https://www.facebook.com/vietren02032009/" target="_blank"><i class="fa fa-facebook color-facebook"></i></a></li>
-               <li><a href="https://plus.google.com/u/0/118217641743102960494?hl=vi" target="_blank"><i class="fa fa-google-plus color-google-plus"></i></a></li>
-               <li><a href="https://www.pinterest.com/vietren999999/" target="_blank"><i class="fa fa-pinterest color-pinterest"></i></a></li>
-               <li><a href="https://www.youtube.com/channel/UCcVOqTLu33lURWPwBWLCZIg" target="_blank"><i class="fa fa-youtube color-youtube" target="_blank"></i></a></li>
+                <li><a href="https://www.facebook.com/vietren02032009/" target="_blank" style="background: #3f4da1;"><i class="fa fa-facebook color-facebook"></i></a></li>
+                <li><a href="https://plus.google.com/u/0/118217641743102960494?hl=vi" target="_blank" style="background: #dd4b38;"><i class="fa fa-google-plus color-google-plus"></i></a></li>
+                <li><a href="https://www.pinterest.com/vietren999999/" target="_blank" style="background: #dd4b38;"><i class="fa fa-pinterest-p color-pinterest"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCcVOqTLu33lURWPwBWLCZIg" target="_blank" style="background: #dd4b38;"><i class="fa fa-youtube-play color-youtube" target="_blank"></i></a></li>
               </ul>
            </div>
            <!-- /Above Navbar -->
